variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:2: error: illegal start of simple pattern
var : caseOrange : Int = 0
    ^RunHalf:3: error: '=' expected but ';' found.
while (2 * biscuits = caseOrange + 1) {
^